fixed down arrow click.

--- a/app/src/main/res/layout/activity_show_profile_activity.xml
+++ b/app/src/main/res/layout/activity_show_profile_activity.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.ShowProfileActivity">
 
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.example.myprofile.viewmodel.ShowProfileViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,6 +29,7 @@
             android:id="@+id/image_view_show_profile_down_navigation_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{()->viewmodel.downNavigationClicked()}"
             android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintBottom_toBottomOf="@+id/recycler_show_profile_posts_holder"
             app:layout_constraintEnd_toEndOf="parent"
