--- a/mapsmodule/src/main/res/layout/activity_locate_me_acitivty.xml
+++ b/mapsmodule/src/main/res/layout/activity_locate_me_acitivty.xml
@@ -1,15 +1,14 @@
 <layout>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_layout_locate_me"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.LocateMeActivity">
 
         <fragment
-            android:id="@+id/map_fragment_locate_me"
             class="com.google.android.gms.maps.SupportMapFragment"
+            android:id="@+id/map_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
